# FastApiTemplate

./: .pre-commit-config.yaml  Makefile  app.py  pyproject.toml
configs/: .env.example  Database.py  Environment.py
convertors/: User.py
errors/: errors.py  handlers.py
migrations/: env.py
migrations/versions/: 84410be4425d_add_user.py  f1321365bcae_add_user.py
models/: BaseModel.py  User.py  news.py  user.py
repositories/: User.py
repositories/mixins/: crud.py
routing/v1/: User.py
schemas/: Auth.py  UserSchema.py
services/: Auth.py  User.py
services/mixins/: crud.py
utils/: errors.py  wrappers.py
